[package]
name = "nipper"
version = "0.1.5"
description = "HTML manipulation with CSS seletors"
license = "MIT/Apache-2.0"
repository = "https://github.com/importcjj/nipper"
documentation = "https://docs.rs/nipper/latest"
keywords = ["html", "css", "selector", "scraping", "crawler"]
authors = ["importcjj <importcjj@gmail.com>"]
edition = "2018"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
html5ever = "0.25.1"
selectors = "0.22.0"
cssparser = "0.27.2"
tendril = "0.4.1"
markup5ever = "0.10.0"


[dev-dependencies]
reqwest = { version = "0.10.4", features = ["blocking"] }
regex = "1.3.6"
lazy_static = "1.4.0"
readability = "0.1.5"
url = "2.1.1"
