[package]
name = "nipper"
version = "0.1.9"
description = "HTML manipulation with CSS seletors"
license = "MIT/Apache-2.0"
repository = "https://github.com/importcjj/nipper"
documentation = "https://docs.rs/nipper/latest"
keywords = ["html", "css", "selector", "scraping", "crawler"]
authors = ["importcjj <importcjj@gmail.com>"]
edition = "2018"
readme = "README.md"

[dependencies]
cssparser = "0.28.1"
html5ever = "0.25.1"
markup5ever = "0.10.1"
selectors = "0.23.0"
tendril = "0.4.2"

[dev-dependencies]
lazy_static = "1.4.0"
readability = "0.2.0"
regex = "1.4.6"
reqwest = { version = "0.11.3", features = ["blocking"] }
url = "2.2.1"
