[package]
name = "nipper"
version = "0.1.10"
description = "HTML manipulation with CSS seletors"
license = "MIT/Apache-2.0"
repository = "https://github.com/importcjj/nipper"
documentation = "https://docs.rs/nipper/latest"
keywords = ["html", "css", "selector", "scraping", "crawler"]
authors = ["importcjj <importcjj@gmail.com>"]
edition = "2018"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
html5ever = "0.26.0"
selectors = "0.23.0"
cssparser = "0.28.1"
tendril = "0.4.2"
markup5ever = "0.11.0"

indexmap = "1.9.2"
fxhash = "0.2.1"

[dev-dependencies]
reqwest = { version = "0.11.3", features = ["blocking"] }
regex = "1.4.5"
lazy_static = "1.4.0"
readability = "0.2.0"
url = "2.2.1"
